# ai-engineering-final-assignment-pj13

./: .flake8  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/data/: sample_reddit.json  sample_tweets.json  sample_youtube.json
backend/src/: graph.py  main.py
backend/src/crawler/: __init__.py  reddit.py  twitter.py  youtube.py
backend/src/llm/: gemini.py
backend/tests/: test_api.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx
frontend/src/components/: Charts.tsx  KeywordForm.tsx  SummaryCard.tsx
frontend/src/pages/: Home.tsx  Result.tsx
